Fixed horizontal scroll

--- a/css/style.css
+++ b/css/style.css
@@ -113,6 +113,7 @@ a.jump:active, a.jump:focus, a.jump:hover{
 }
 .content {
   margin: 0px 20px 20px 20px;
+  max-width: 100%;
 }
 
 h1 {
@@ -346,7 +347,8 @@ header {
   text-align: center;
   padding: 2rem;
   height: 250px;
-  overflow: hidden;
+  overflow-y: hidden;
+  max-width: 100%;
 }
 #opensap{
   background-color: #fdf6c5;
@@ -572,9 +574,7 @@ footer {
     margin: 0px 100px 20px 100px;
   }
   .banner{
-    width: 100%;
     height: 400px;
-    overflow: hidden;
   }
     .banner h1{
       font-family: 'Lato', sans-serif;
